Added 2022 IPL player rosters

--- a/auction.html
+++ b/auction.html
@@ -343,5 +343,6 @@ background-color:orange;
   <script type="text/javascript" src="playerRatings.js"> </script>
   <script type="text/javascript" src="cricketPlayerList.js"> </script>
   <script type="text/javascript" src="cricketPlayerList2022.js"> </script>
+  <script type="text/javascript" src="cricketPlayerListWithTeams2022.js"> </script>
    <script type="text/javascript" src="auction.js"> </script>
 </html>
